--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "antd": "^5.14.2",
     "axios": "^1.6.7",
     "formik": "^2.4.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
